# diet

./: .ghci  diet.cabal
src/Data/Set/: Diet.hs
test/: diet-test.cabal
test/src/: Main.hs
test/src/Data/Set/Diet/: Data.hs  Tests.hs
