Name:               diet-test
Version:            0.0.1
Author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>
Maintainer:         Tony Morris
Copyright:          Tony Morris
Synopsis:           Tests for the diet package
Category:           Development
Description:        Tests for the diet package
Homepage:           https://github.com/tonymorris/diet
Cabal-Version:      >= 1.6
Build-Type:         Simple

Source-Repository   head
  Type:             git
  Location:         git@github.com:tonymorris/diet.git

Flag                small_base
  Description:      Choose the new, split-up base package.

Executable          diet-test
  Hs-Source-Dirs:  
                    ../src src

  Main-Is: 
                    Main.hs

  Ghc-Options:
                    -Wall
                    -fhpc
                    -fwarn-tabs
  
  Build-Depends:  
                   base < 5 && >= 3
                   , QuickCheck
                   , test-framework
                   , test-framework-quickcheck2
                   , test-framework-hunit

  GHC-Options:      
                   -Wall
                   -funbox-strict-fields

